clusters/base/kubecost/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost
  namespace: kubecost
spec:
  ingressClassName: nginx
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubecost-cost-analyzer
                port:
                  number: 9090
